# yap-translate

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
templates/: index.html
